--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>
       <h1>Journal</h1>
     </header>
-    
-    <form class="" action="index.html" method="post">
+
+    <form class="journalInput" action="index.html" method="post">
       <input type="text" name="name" value="">
       <textarea name="name" rows="8" cols="20"></textarea>
       <input type="submit" value="Submit">
