Add link to jQuery, classes to input and textarea

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <meta charset="utf-8">
     <title>Journal</title>
@@ -11,8 +12,8 @@
     </header>
 
     <form class="journalInput" action="index.html" method="post">
-      <input type="text" name="name" value="">
-      <textarea name="name" rows="8" cols="20"></textarea>
+      <input class="title" type="text" name="name" value="">
+      <textarea class="text" name="name" rows="8" cols="20"></textarea>
       <input type="submit" value="Submit">
     </form>
 
