--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://code.jquery.com/jquery-2.2.1.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
+    <!-- <link rel="stylesheet" href="css/styles.css" charset="utf-8"> -->
     <meta charset="utf-8">
     <title>Journal</title>
   </head>
@@ -11,8 +12,10 @@
       <h1>Journal</h1>
     </header>
 
-    <form class="journalInput" action="index.html" method="post">
+    <form class="journalInput">
+      <label for="title">Title:</label>
       <input class="title" type="text" name="name" value="">
+      <label for="text">Entry:</label>
       <textarea class="text" name="name" rows="8" cols="20"></textarea>
       <input type="submit" value="Submit">
     </form>
