--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <script src="https://code.jquery.com/jquery-2.2.1.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
-    <!-- <link rel="stylesheet" href="css/styles.css" charset="utf-8"> -->
+    <link rel="stylesheet" href="css/styles.css" charset="utf-8">
     <meta charset="utf-8">
     <title>Journal</title>
   </head>
@@ -17,7 +17,7 @@
       <input class="title" type="text" name="name" value="">
       <label for="text">Entry:</label>
       <textarea class="text" name="name" rows="8" cols="20"></textarea>
-      <input type="submit" value="Submit">
+      <button type="submit">Submit</button>
     </form>
 
     <div id="entries">
